# pspdev-nix

./: README.md  flake.nix  main.c
.github/workflows/: ci.yml
nix/: devshells.nix  overlays.nix  psp-mk-derivation.nix
src/templates/cmake/: CMakeLists.txt  flake.nix
src/templates/make/: .gitignore  Makefile  flake.nix
src/templates/make/src/: main.cpp
src/templates/sdl2/: .gitignore  CMakeLists.txt  flake.nix
src/templates/sdl2/src/: main.cpp
